Adding a root path check for S3 file access